[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/void_sprite_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://characters/explosion_generator.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;
uniform float intensity : hint_range(0,1) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float r = (color.r + intensity) * color.a;
	float g = (color.g + intensity) * color.a;
	float b = (color.b + intensity) * color.a;
	color = vec4(r, g, b, color.a);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/intensity = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.6752, 20.8909 )

[sub_resource type="Animation" id=4]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 5, 3, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 75.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
color = Color( 0.956863, 0.0156863, 0.0156863, 1 )

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 3
mode = 1
script = ExtResource( 1 )
RUN_SPEED = 1.0
HP = 40.0
NUM_DROPS = 5
TYPE = "Melee"
amount_to_move = 75.0
where_to_move = 65.0
move_period = 2.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
modulate = Color( 1, 84.89, 1, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = ExtResource( 2 )
animation = "void1"
frame = 3
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/take damage" = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 5
one_shot = true
explosiveness = 0.8
process_material = SubResource( 5 )

[node name="Generators" type="Node2D" parent="."]

[node name="Move" type="Tween" parent="."]

[node name="ExplosionGenerator" parent="." instance=ExtResource( 3 )]
num_explosions = 1
explosion_interval = 0.0
last_explosion_centered = true

[node name="ExitTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="tween_all_completed" from="Move" to="." method="_on_Move_tween_all_completed"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
